# AisParser

./: CMakeLists.txt  aisDbMySql.sql  aisDbOracle.sql  aisDbPostgreSQL.sql  aisParserAppGeneral.cpp  readme.txt
installer/: AisParser.nsi  license.txt
src/: AisCsvWriter.h  AisDatabaseWriter.h  AisFlatFileInputSource.h  AisKmlTrackWriter.h  AisMessageParser.h  AisMsisSentenceParser.h  AisMySqlDatabaseWriter.h  AisParserTemplates.h  AisPostgreSqlDatabaseWriter.h  AisPostgreSqlDatabaseWriterRadarAISTable.h  AisPostgreSqlDatabaseWriterSingleAISTable.h  AisPostgreSqlDatabaseWriterStaticTable.h  AisSatSentenceParser.h  AisSentenceParser.h  AisShapefilePointWriter.h  AisShapefileTrackWriter.h  AisTcpStreamInputSource.h  AisTcpWriter.h  AisTrack.h  AisTsvWriter.h  AisWriterStaticTable.h  RadarMessage.h
src/apps/: CMakeLists.txt
src/apps/AisParserApp/: AisParserApp.pro  CMakeLists.txt  LogToTsv.cpp  aisparsermainwindow.cpp  aisparsermainwindow.h  aisparsermainwindow.ui  main.cpp
src/apps/CannedAisServer/: CMakeLists.txt  CannedAisServer.cpp
src/apps/LogToCsv/: LogToCsv.cpp
src/apps/LogToDb/: CMakeLists.txt  LogToDb.cpp
src/apps/LogToIcodeDb/: LogToIcodeDb.cpp  LogToIcodeSchema.opensdf
src/apps/LogToKmlPlacemarks/: LogToKmlPlacemarks.cpp
src/apps/LogToKmlTracks/: LogToKmlTracks.cpp
src/apps/LogToMySqlDb/: CMakeLists.txt  LogToMySqlDb.cpp
src/apps/LogToOracleDb/: LogToOracleDb.cpp
src/apps/LogToPostgreSqlDb/: LogToPostgreSqlDb.cpp
src/apps/LogToShapefilePoints/: CMakeLists.txt  LogToShapefilePoints.cpp
src/apps/LogToShapefileTracks/: CMakeLists.txt
src/apps/LogToTsv/: LogToTsv.cpp
src/apps/TcpToDb/: TcpToDb.cpp
src/apps/TcpToMySqlDb/: CMakeLists.txt  TcpToMySqlDb.cpp
src/apps/TcpToOracleDb/: TcpToOracleDb.cpp
src/apps/TcpToPostgreSqlDbWtable/: TcpToPostgreSqlDbWtable.cpp
src/apps/TcpToTcp/: CMakeLists.txt  TcpToTcp.cpp
src/apps/TcpToTsv/: TcpToTsv.cpp
trunk/AisParser/: CMakeLists.txt  aisDbPostgreSQL.sql
trunk/AisParser/installer/: AisParser.nsi
trunk/AisParser/src/: AisCoordinate.h  AisCsvWriter.h  AisDatabaseWriter.h  AisDebug.h  AisFlatFileInputSource.h  AisInputSource.h  AisKmlPlacemarkWriter.h  AisKmlTrackWriter.h  AisMessage.h  AisMessageParser.h  AisMsisSentenceParser.h  AisParserTemplates.h  AisPostgreSqlDatabaseWriter.h  AisPostgreSqlDatabaseWriterSingleAISTable.h  AisSatSentenceParser.h  AisSentenceParser.h  AisShapefileTrackWriter.h  AisTcpStreamInputSource.h  AisTrack.h  AisTrackSet.h  AisTrackWriter.h  AisTsvWriter.h  AisWriter.h  CMakeLists.txt  RadarMessageParser.h
trunk/AisParser/src/apps/: CMakeLists.txt
trunk/AisParser/src/apps/AisParserApp/: CMakeLists.txt  aisparsermainwindow.cpp  aisparsermainwindow.h  aisparsermainwindow.ui
trunk/AisParser/src/apps/CannedAisServer/: CannedAisServer.cpp
trunk/AisParser/src/apps/LogToCsv/: CMakeLists.txt
trunk/AisParser/src/apps/LogToDb/: LogToDbApp.cpp
trunk/AisParser/src/apps/LogToIcodeDb/: CMakeLists.txt  LogToIcodeDb.cpp
trunk/AisParser/src/apps/LogToKmlPlacemarks/: CMakeLists.txt  LogToKmlPlacemarks.cpp
trunk/AisParser/src/apps/LogToKmlTracks/: CMakeLists.txt  LogToKmlTracks.cpp
trunk/AisParser/src/apps/LogToOracleDb/: CMakeLists.txt  LogToOracleDb.cpp
trunk/AisParser/src/apps/LogToPostgreSqlDb/: CMakeLists.txt  LogToPostgreSqlDb.cpp
trunk/AisParser/src/apps/LogToShapefilePoints/: CMakeLists.txt  LogToShapefilePoints.cpp
trunk/AisParser/src/apps/LogToShapefileTracks/: CMakeLists.txt  LogToShapefileTracks.cpp
trunk/AisParser/src/apps/LogToTsv/: CMakeLists.txt  LogToTsv.cpp
trunk/AisParser/src/apps/TcpToCsv/: CMakeLists.txt  TcpToCsv.cpp
trunk/AisParser/src/apps/TcpToDb/: CMakeLists.txt  TcpToDb.cpp
trunk/AisParser/src/apps/TcpToOracleDb/: CMakeLists.txt
trunk/AisParser/src/apps/TcpToPostgreSqlDb/: CMakeLists.txt  TcpToPostgreSqlDb.cpp
trunk/AisParser/src/apps/TcpToPostgreSqlDbWtable/: CMakeLists.txt  TcpToPostgreSqlDbWtable.cpp
trunk/AisParser/src/apps/TcpToTsv/: CMakeLists.txt  TcpToTsv.cpp
