cmake_minimum_required(VERSION 2.8)
project( AisParserApp )
Message(STATUS "############################## Setting up the AisParserApp ##############################")
message(STATUS "BOOST_LIBRARY_PATH == ${BOOST_LIBRARY_PATH}")
message(STATUS "POSTGRESQL_LIBRARY_PATH == ${POSTGRESQL_LIBRARY_PATH}")
message(STATUS "MYSQL_LIBRARY_PATH == ${MYSQL_LIBRARY_PATH}")
message(STATUS "ORACLE_LIBRARY_PATH == ${ORACLE_LIBRARY_PATH}")
message(STATUS "SHAPELIB_LIBRARY_PATH == ${SHAPELIB_LIBRARY_PATH}")

#QT_DIR must be set for the following
FIND_PACKAGE(Qt4 REQUIRED)

FILE(GLOB HEADERS *.h)
source_group( "Header Files" FILES ${HEADER_FILES})

FILE(GLOB SOURCES *.cpp)

FILE(GLOB FORMS *.ui)
SOURCE_GROUP( "Form Files" FILES ${FORMS})

include_directories()
FILE(GLOB BOOST_LIBRARIES ${BOOST_LIBRARY_PATH}/*.lib)
FILE(GLOB POSTGRESQL_LIBRARIES ${POSTGRESQL_LIBRARY_PATH}/*.lib)
FILE(GLOB MYSQL_LIBRARIES ${MYSQL_LIBRARY_PATH}/*.lib)
FILE(GLOB ORACLE_LIBRARIES ${ORACLE_LIBRARY_PATH}/*.lib)
#FILE(GLOB SHAPELIB_LIBRARIES ${SHAPELIB_LIBRARY_PATH}/*.lib)
set(SHAPELIB_LIBRARIES ${SHAPELIB_LIBRARY_PATH}/shapelib.lib)

set(AIS_PARSER_APP_LIBRARIES ${BOOST_LIBRARIES} ${POSTGRESQL_LIBRARIES} ${MYSQL_LIBRARIES} ${ORACLE_LIBRARIES} ${SHAPELIB_LIBRARIES})
set(AIS_PARSER_APP_INCLUDES ${PROJECT_SOURCE_DIR} ${AIS_PARSER_SRC_DIR} ${SHAPELIB_INCLUDE_DIR} ${ORACLE_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR} ${POSTGRESQL_INCLUDE_DIR} ${BOOST_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
include_directories( ${AIS_PARSER_APP_INCLUDES})

QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})
QT4_WRAP_UI(FORMS_HEADERS ${FORMS})

SOURCE_GROUP("Generated Sources" FILES ${HEADERS_MOC} ${FORMS_HEADERS})

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

add_executable( AisParserApp ${SOURCES} ${HEADERS_MOC} ${FORMS_HEADERS} ${HEADERS} ${FORMS})
TARGET_LINK_LIBRARIES(AisParserApp ${QT_LIBRARIES} ${AIS_PARSER_APP_LIBRARIES})

if(WIN32)
   install(TARGETS AisParserApp
    RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/install/bin"
	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/install/lib"
	ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/install/lib")
	install(FILES ${HEADES} DESTINATION "${CMAKE_INSTALL_PREFIX}/install/include/AisParserApp")
else(WIN32)
   install(TARGETS AisParserApp
    LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/install" COMPONENT bin)
endif(WIN32)

