cmake_minimum_required(VERSION 2.8)
project( CannedAisServer )
add_executable( CannedAisServer CannedAisServer.cpp )
FILE(GLOB BOOST_LIBRARIES ${BOOST_LIBRARY_PATH}/*.lib)
set(LIBRARIES ${BOOST_LIBRARIES})
set(INCLUDES ${BOOST_INCLUDE_DIR})
include_directories( CannedAisServer ${INCLUDES})
target_link_libraries( CannedAisServer ${LIBRARIES} )