cmake_minimum_required(VERSION 2.8)
project( LogToShapefileTracks )
add_executable( LogToShapefileTracks LogToShapefileTracks.cpp )
FILE(GLOB BOOST_LIBRARIES ${BOOST_LIBRARY_PATH}/*.lib)
set(SHAPELIB_LIBRARIES ${SHAPELIB_LIBRARY_PATH}/shapelib.lib)

set(LIBRARIES ${BOOST_LIBRARIES} ${SHAPELIB_LIBRARIES})
set(INCLUDES ${BOOST_INCLUDE_DIR} ${AIS_PARSER_SRC_DIR} ${SHAPELIB_INCLUDE_DIR})
include_directories( LogToShapefileTracks ${INCLUDES})
target_link_libraries( LogToShapefileTracks ${LIBRARIES} )
