cmake_minimum_required(VERSION 2.8)
project( TcpToMySqlDb )
add_executable( TcpToMySqlDb TcpToMySqlDb.cpp )
FILE(GLOB BOOST_LIBRARIES ${BOOST_LIBRARY_PATH}/*.lib)
FILE(GLOB MYSQL_LIBRARIES ${MYSQL_LIBRARY_PATH}/*.lib)
set(LIBRARIES ${BOOST_LIBRARIES} ${MYSQL_LIBRARIES})
set(INCLUDES ${BOOST_INCLUDE_DIR} ${AIS_PARSER_SRC_DIR} ${MYSQL_INCLUDE_DIR})
include_directories( TcpToMySqlDb ${INCLUDES})
target_link_libraries( TcpToMySqlDb ${LIBRARIES} )
