cmake_minimum_required(VERSION 2.8)
project( TcpToTcp )
add_executable( TcpToTcp TcpToTcp.cpp )
FILE(GLOB BOOST_LIBRARIES ${BOOST_LIBRARY_PATH}/*.lib)
set(LIBRARIES ${BOOST_LIBRARIES})
set(INCLUDES ${BOOST_INCLUDE_DIR} ${AIS_PARSER_SRC_DIR})
include_directories( TcpToTcp ${INCLUDES})
target_link_libraries( TcpToTcp ${LIBRARIES} )
