cmake_minimum_required(VERSION 2.8)
project( AisParser )
add_subdirectory( CannedAisServer )
add_subdirectory( TcpToTsv )
add_subdirectory( LogToTsv )
add_subdirectory( TcpToOracleDb )
add_subdirectory( LogToOracleDb )
add_subdirectory( LogToMySqlDb )
add_subdirectory( TcpToMySqlDb )
add_subdirectory( LogToKmlPlacemarks )
add_subdirectory( LogToShapefilePoints )
add_subdirectory( LogToKmlTracks )
add_subdirectory( LogToShapefileTracks )
