cmake_minimum_required(VERSION 2.8)
project( LogToOracleDb )
add_executable( LogToOracleDb LogToOracleDb.cpp )
FILE(GLOB BOOST_LIBRARIES ${BOOST_LIBRARY_PATH}/*.lib)
FILE(GLOB ORACLE_LIBRARIES ${ORACLE_LIBRARY_PATH}/*.lib)
set(LIBRARIES ${BOOST_LIBRARIES} ${ORACLE_LIBRARIES})
set(INCLUDES ${BOOST_INCLUDE_DIR} ${AIS_PARSER_SRC_DIR} ${ORACLE_INCLUDE_DIR})
include_directories( LogToOracleDb ${INCLUDES})
target_link_libraries( LogToOracleDb ${LIBRARIES} )
