cmake_minimum_required(VERSION 2.8)
project( LogToPostgreSqlDb )
add_executable( LogToPostgreSqlDb LogToPostgreSqlDb.cpp )
FILE(GLOB BOOST_LIBRARIES ${BOOST_LIBRARY_PATH}/*.lib)
FILE(GLOB POSTGRESQL_LIBRARIES ${POSTGRESQL_LIBRARY_PATH}/*.lib)
set(LIBRARIES ${BOOST_LIBRARIES} ${POSTGRESQL_LIBRARIES})
set(INCLUDES ${BOOST_INCLUDE_DIR} ${AIS_PARSER_SRC_DIR} ${POSTGRESQL_INCLUDE_DIR})
include_directories( LogToPostgreSqlDb ${INCLUDES})
target_link_libraries( LogToPostgreSqlDb ${LIBRARIES} )
